--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Mixin",
-  "version": "0.12.0",
+  "name": "test",
+  "version": "0.0.1",
   "private": true,
   "description": "Mixin messenger desktop",
   "author": "desktop@mixin.one",
